tests/ui/static/gc/fsa/basic_calls.stderr
error: The drop method for `Wrapper<FinalizerUnsafeU8Wrapper>` cannot be safely finalized.
  --> $DIR/basic_calls.rs:32:13
   |
LL |     use_val(&x.0); // should fail
   |             ----
   |             |
   |             a finalizer cannot safely use this `FinalizerUnsafeU8Wrapper`
   |             from a drop method because it does not implement `FinalizerSafe`.
...
LL |     Gc::new(Wrapper(FinalizerUnsafeU8Wrapper(1)));
   |     --------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<Wrapper<FinalizerUnsafeU8Wrapper>>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `FinalizerSafe`.

error: The drop method for `Wrapper<FinalizerUnsafeU8Wrapper>` cannot be safely finalized.
  --> $DIR/basic_calls.rs:32:13
   |
LL |     use_val(&x.0); // should fail
   |             ----
   |             |
   |             a finalizer cannot safely use this `FinalizerUnsafeU8Wrapper`
   |             from a drop method because it does not implement `FinalizerSafe`.
...
LL |     Gc::new(Wrapper(FinalizerUnsafeU8Wrapper(1)));
   |     --------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<Wrapper<FinalizerUnsafeU8Wrapper>>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `FinalizerSafe`.

error: aborting due to 2 previous errors

